# Afterompt

./: CMakeLists.txt  README.md
src/: afterompt.c  afterompt.h  trace.c  trace.h
